hphp/test/zend/good/ext/standard/tests/file/fileinode_variation.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no link()/symlink() on Windows');
}
}
