hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_15_open_error-win.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != 'WIN' ) {
	die('skip windows only test');
}
require_once(__DIR__ . '/skipif.inc');
?>